; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/mge/extr_if_mge.c_mge_start.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/mge/extr_if_mge.c_mge_start.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ifnet = type { %struct.mge_softc* }
%struct.mge_softc = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.ifnet*)* @mge_start to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @mge_start(%struct.ifnet* %0) #0 {
  %2 = alloca %struct.ifnet*, align 8
  %3 = alloca %struct.mge_softc*, align 8
  store %struct.ifnet* %0, %struct.ifnet** %2, align 8
  %4 = load %struct.ifnet*, %struct.ifnet** %2, align 8
  %5 = getelementptr inbounds %struct.ifnet, %struct.ifnet* %4, i32 0, i32 0
  %6 = load %struct.mge_softc*, %struct.mge_softc** %5, align 8
  store %struct.mge_softc* %6, %struct.mge_softc** %3, align 8
  %7 = load %struct.mge_softc*, %struct.mge_softc** %3, align 8
  %8 = call i32 @MGE_TRANSMIT_LOCK(%struct.mge_softc* %7)
  %9 = load %struct.ifnet*, %struct.ifnet** %2, align 8
  %10 = call i32 @mge_start_locked(%struct.ifnet* %9)
  %11 = load %struct.mge_softc*, %struct.mge_softc** %3, align 8
  %12 = call i32 @MGE_TRANSMIT_UNLOCK(%struct.mge_softc* %11)
  ret void
}

declare dso_local i32 @MGE_TRANSMIT_LOCK(%struct.mge_softc*) #1

declare dso_local i32 @mge_start_locked(%struct.ifnet*) #1

declare dso_local i32 @MGE_TRANSMIT_UNLOCK(%struct.mge_softc*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
